--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "create-next-app": "^13.5.4",
     "eslint": "8.50.0",
     "eslint-config-next": "13.5.2",
+    "firebase": "^10.4.0",
     "next": "13.5.2",
     "postcss": "8.4.30",
     "react": "18.2.0",
