--- a/package.json
+++ b/package.json
@@ -22,11 +22,14 @@
     "eslint": "8.50.0",
     "eslint-config-next": "13.5.2",
     "firebase": "^10.4.0",
+    "jquery": "^3.7.1",
     "next": "13.5.2",
     "postcss": "8.4.30",
     "react": "18.2.0",
+    "react-autosuggest": "^10.1.0",
     "react-dom": "18.2.0",
-    "sass": "^1.68.0",
+    "react-themeable": "^1.1.0",
+    "sass": "^1.69.0",
     "styled-components": "^5.3.11",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "^3.3.3",
