--- a/package.json
+++ b/package.json
@@ -13,17 +13,18 @@
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.8",
     "@mui/icons-material": "^5.14.9",
-    "@mui/material": "^5.14.12",
-    "@mui/styled-engine-sc": "^5.14.10",
+    "@mui/material": "^5.14.13",
+    "@mui/styled-engine-sc": "^5.14.12",
     "autoprefixer": "10.4.16",
     "axios": "^1.5.1",
+    "bootstrap": "^5.3.2",
     "clsx": "^2.0.0",
     "create-next-app": "^13.5.4",
     "eslint": "8.50.0",
     "eslint-config-next": "13.5.2",
     "firebase": "^10.4.0",
     "jquery": "^3.7.1",
-    "next": "13.5.2",
+    "next": "^13.5.4",
     "postcss": "8.4.30",
     "react": "18.2.0",
     "react-autosuggest": "^10.1.0",
