--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/styled-engine-sc": "^5.14.10",
     "autoprefixer": "10.4.16",
     "axios": "^1.5.1",
+    "bootstrap": "^5.3.2",
     "clsx": "^2.0.0",
     "create-next-app": "^13.5.4",
     "eslint": "8.50.0",
@@ -27,6 +28,7 @@
     "postcss": "8.4.30",
     "react": "18.2.0",
     "react-autosuggest": "^10.1.0",
+    "react-bootstrap": "^2.9.0",
     "react-dom": "18.2.0",
     "react-themeable": "^1.1.0",
     "sass": "^1.69.0",
